--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Game Kit</title>
+
+    <style>
+      body{
+        background-color: #B71C1C;
+      }
+    </style>
+
   </head>
   <body>
     <noscript>
